public enum StatementType {
    ONLINE,
    POSTAL
}
