@startuml
skinparam classAttributeIconSize 0


title __Bank Application Class Diagram__\n

abstract class BankAccount {
    - accHolder: Person
    # balance : double
    - accNum : int
    - {static} bankCard : BankCard
    - observers : ArrayList<Observer>
    - transactions : ArrayList<String>
    + BankAccount()
    + BankAccount(accHolder: Person, accNum: int,
    balance: double, bankCard: BankCard
    + getBalance(): double
    + setBalance(balance: double): void
    + getTransactions(): ArrayList
    + getAccNum(): int
    + setAccNum(int accNum): void
    + deposit(amountDeposited: double): void
    + withdraw(amountWithdrawn: double): void
    + toString() : String
    {abstract} + describeAccount() : String
 }

 class CurrentAccount {
    - TYPE : String
    + CurrentAccount(accHolder: Person, accNum: int,
    balance: double, bankCard: BankCard)
    + describeAccount() : String
 }

 class Person {
    - address : String
    - name : String
    + Person(name: String, address: String)
    + Person()
    + toString() : String
 }

 class SavingsAccount {
    - TYPE : String
    + SavingsAccount(accHolder: Person, accNum: int,
    balance: double, bankCard: BankCard)
    + describeAccount(): String
 }

 class DepositAccount {
    - TYPE : String
    + DepositAccount(accHolder: Person, accNum: int,
    balance: double, bankCard: BankCard)
    + describeAccount(): String
 }

 class BankStatement {
    - statementType: StatementType
    - {static} statement: BankStatement
    - printBankStatement(account: BankAccount): void
}

enum StatementType {
  ONLINE
  POSTAL
}

  BankAccount -right-o Person : has a
  CurrentAccount -up-|> BankAccount
  SavingsAccount -up-|> BankAccount
  DepositAccount -up-|> BankAccount
  BankAccount *-right- BankStatement: receives
  StatementType *-down- BankStatement: has a

@enduml
